k8s/simulator-deployment.yml
# File: k8s/simulator-deployment.yml
# Purpose: Defines the Deployment for the Drone Simulator.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simulator
  template:
    metadata:
      labels:
        app: simulator
    spec:
      containers:
        - name: simulator-container
          image: kietkite/odyssey-drone-simulator:1.0.0
          imagePullPolicy: Always
          # We use environment variables to tell the simulator how to find the
          # other services using their Kubernetes Service names. This is the magic
          # of Kubernetes DNS. The pod will resolve 'telemetry-service' to the
          # correct internal cluster IP.
