k8s/telemetry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-service
spec:
  type: NodePort
  selector:
    app: telemetry
  ports:
    - name: websocket
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
